# lucy

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pytest.ini  setup.cfg
.github/workflows/: develop.yml  sphinx.yml  testing.yml
docs/source/: conf.py  externals.rst  index.rst  quickstart.rst  reference.rst
docs/source/_templates/: custom-class-template.rst
docs/source/_templates/autoapi/: index.rst
src/lucy/: __init__.py  barentswatch.py  fdir.py  fiskeridir.py  licecount.py  norkyst.py  progress.py  release.py  roms.py  schema.py  tools.py
src/lucy/data/: __init__.py  barentswatch.py  fiskeridir.py  kystverket.py
src/lucy/norkyst/: __init__.py  norkyst.py  roms.py  roms2nc4int2.py
src/tests/: fdir_test.py  test_barentswatch.py  test_eos.py  test_fdir.py  test_kystverket.py  test_licecount.py  test_norkyst.py  test_numerics.py  test_progress.py  test_release.py  test_roms.py  test_roms2nc.py
src/tests/fixtures/: profile.csv
