[metadata]
name = lucy
version = attr: lucy.__version__
description = Source code for IMR's work on salmon lice
author = Pål Næverlid Sævik
author_email = paal.naeverlid.saevik@hi.no
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pnsaevik/effluent
keywords = salmon lice IMR traffic light system
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
project_urls =
    Documentation = https://imr_lucy.readthedocs.io/
    Changelog = https://github.com/pnsaevik/lucy/blob/main/CHANGELOG.md

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    numpy
    pandas
python_requires = >=3.6

[options.extras_require]
dev =
    pytest
    responses
    sphinx
    sphinx-autoapi

[options.packages.find]
where=src

[options.package_data]
* =
    *.toml
    *.csv
    *.nc
